--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -25,7 +25,7 @@
 @use '_navigation';
 @use '_socialmedia';
 @use '_mobile-menu';
-@use '_follows';
+@use '_alerts';
 @use '_singular';
 @use '_cookies';
 @use '_pagination';
