--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -181,7 +181,7 @@
   --navigation-drop-shadow: drop-shadow(0 2px 1px rgba(0, 0, 0, 17%));
   // --navigation-new-follow-background: var(--primary-500);
   // --navigation-new-follow-color: var(--fg-inverted);
-  // --new-alert-color: var(--primary-500);
+  // --alert-highlight-color: var(--primary-500);
   // --new-alert-icon-text-color: var(--fg-inverted);
 
   // === TABS ==================================================================
