--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -308,7 +308,7 @@
   --navigation-drop-shadow: drop-shadow(0 3px 2px rgb(0 0 0 / 20%));
   --navigation-new-follow-background: var(--primary-500);
   --navigation-new-follow-color: var(--fg-inverted);
-  --new-alert-color: var(--primary-500);
+  --alert-highlight-color: var(--primary-500);
   --new-alert-icon-text-color: var(--fg-inverted);
 
   // === TABS ==================================================================
