Fix load story comments button height

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -301,7 +301,7 @@
   .comments-loading-placeholder {
     text-align: center;
     margin-top: 16px;
-    height: get_clamp(34, 39, 320, 1024);
+    height: 32px;
   }
 }
 
